# multisight-xsdk

./: .gitignore  CMakeLists.txt
cmake/: base_app.cmake  base_lib.cmake  base_ut.cmake
include/XSDK/: Assert.h  IXUnknown.h  OS.h  XActor.h  XDuration.h  XException.h  XFile.h  XIRef.h  XIWeakRef.h  XLogger.h  XOption.h  XRef.h  XSHA256.h  XSocket.h  XStatistics.h  XString.h  XTime.h  XTimeZone.h  XWeakRef.h
source/: UuidUtils.cpp  XActor.cpp  XLogger.cpp  XOption.cpp  XSHA256.cpp  XSSLSocket.cpp  XSocket.cpp  XTimeZone.cpp  XUuid.cpp
unit_tests/: CMakeLists.txt
unit_tests/include/: XFileTest.h  XLoggerTest.h  XSHA256Test.h  XStatisticsTest.h
unit_tests/source/: XFileTest.cpp  XLoggerTest.cpp  XSHA256Test.cpp  XSocketTest.cpp  XStatisticsTest.cpp
